# ai-powered-water-quality-monitoring-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: methodology.md  public_health_boundary.md  report_template.md  synthetic_lab.md
matlab/: plot_water_quality_metrics.m
notebooks/: 01_synthetic_water_quality_lab.ipynb
scripts/: run_synthetic_water_lab.py
src/waterqual/: __init__.py  alerts.py  anomalies.py  audit.py  config.py  contamination.py  reporting.py  risk.py  synthetic.py  visualization.py
tests/: test_audit.py  test_detection.py  test_pipeline.py  test_synthetic.py
